codex-rs/tui-pty-e2e/tests/snapshots/prompt_flow__custom_response.snap
---
source: tui-pty-e2e/tests/prompt_flow.rs
expression: normalize_for_snapshot(session.screen_contents())
---
  /init - create an AGENTS.md file with instructions for Codex
  /status - show current session configuration
  /approvals - choose what Codex can do without approval
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues


› test prompt


• This is a custom test response from the mock agent.


› [DEFAULT_PROMPT]

  100% context left · ? for shortcuts
