codex-rs/tui-pty-e2e/tests/snapshots/prompt_flow__missing_model.snap
---
source: tui-pty-e2e/tests/prompt_flow.rs
expression: normalize_for_snapshot(session.screen_contents())
---
  /status - show current session configuration
  /approvals - choose what Codex can do without approval
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues


› Hello


■ Fatal error: Model 'nonexistent' has wire_api=acp but is not registered in the
ACP registry

• Snapshots disabled: current directory is not a Git repository. (0s • esc to in


› [DEFAULT_PROMPT]

  100% context left · ? for shortcuts
